[package]
name = "bgt-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dirs = "5.0.1"
env_logger = "0.11.3"
flate2 = "1.0.30"
log = "0.4.22"
octocrab = "0.38.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
tar = "0.4.41"
tokio = { version = "1.38.0", features = ["full"] }
