[package]
name = "bgt"
version = "0.1.0"
authors = ["Will Clark <will@256k1.dev>"]
edition = "2021"
description = "A tool for automated Guix builds of Bitcoin Core"
readme = "README.md"
homepage = "https://github.com/bitcoin-dev-tools/bgt-builder"
repository = "https://github.com/bitcoin-dev-tools/bgt-builder"
license = "MIT"
keywords = ["bitcoin", "guix", "builder"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
daemonize = "0.5.0"
dirs = "5.0.1"
env_logger = "0.11.3"
flate2 = "1.0.30"
libc = "0.2.155"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tar = "0.4.41"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
